resume, insta media query fix, image res on portrait fix, body padding on mobile fix

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -300,10 +300,16 @@ img
 @media screen and (max-width: 991px)
   body
     padding-top: 0px
+    padding-left: 0px
+    padding-right: 0px
+
+  .header
+    padding-top: 15px
 
   #app-container
     position: relative
     overflow-x: hidden
+
   .social-list
     border-right: none
     border-top: 1px solid gray
@@ -313,10 +319,14 @@ img
 
     .social-list-items
       float: left
-      width: 20%
+      width: 16.5%
       text-align: center
       a
         font-size: 1.25rem
+
+  #main-content
+    padding-left: 15px
+    padding-right: 15px
 
   .project-item
     &:hover,
